# NI-PDP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
checkpoint_1/: checkpoint_1.cpp
checkpoint_2/: checkpoint_2.cpp
checkpoint_3/: checkpoint_3.cpp
inputs/: graf_10_3.txt  graf_bipartitni_2.txt  graf_nebipartitni_1.txt
mpi/: mpi.cpp
parallel_data/: parallel_data.cpp
parallel_task/: parallel_task.cpp
sequential/: sequential.cpp
star_scripts/: Makefile  parallel_job.sh  serial_job.sh
star_scripts/mpi/: parallel_job_mpi_3_20_23_20.sh  parallel_job_mpi_3_20_26_25.sh  parallel_job_mpi_4_20_24_23.sh
star_scripts/parallel_data/: serial_job_pd_16_23_20.sh  serial_job_pd_16_24_23.sh  serial_job_pd_16_26_25.sh  serial_job_pd_1_23_20.sh  serial_job_pd_1_24_23.sh  serial_job_pd_1_26_25.sh  serial_job_pd_20_23_20.sh  serial_job_pd_20_24_23.sh  serial_job_pd_20_26_25.sh  serial_job_pd_2_23_20.sh  serial_job_pd_2_24_23.sh  serial_job_pd_2_26_25.sh  serial_job_pd_4_23_20.sh  serial_job_pd_4_24_23.sh  serial_job_pd_4_26_25.sh  serial_job_pd_8_23_20.sh  serial_job_pd_8_24_23.sh  serial_job_pd_8_26_25.sh
star_scripts/parallel_task/: serial_job_pt_16_23_20.sh  serial_job_pt_16_24_23.sh  serial_job_pt_16_26_25.sh  serial_job_pt_1_23_20.sh  serial_job_pt_1_24_23.sh  serial_job_pt_1_26_25.sh  serial_job_pt_20_23_20.sh  serial_job_pt_20_24_23.sh  serial_job_pt_20_26_25.sh  serial_job_pt_2_23_20.sh  serial_job_pt_2_24_23.sh  serial_job_pt_2_26_25.sh  serial_job_pt_4_23_20.sh  serial_job_pt_4_24_23.sh  serial_job_pt_4_26_25.sh  serial_job_pt_8_23_20.sh  serial_job_pt_8_24_23.sh  serial_job_pt_8_26_25.sh
(+3 files in other folders)
